syntax = "proto3";

option go_package = "v1";

import "google/api/annotations.proto";
import "google/protobuf/timestamp.proto";
import "api/v1/common.proto";
import "api/v1/policy_service.proto";
import "api/v1/deployment_service.proto";

package v1;

message Alert {
    string id                       = 1;
    Policy policy                   = 2;
    Deployment deployment           = 3;
    message Violation {
        string message    = 1;
    }
    repeated Violation violations   = 4;
    google.protobuf.Timestamp time  = 5;
    bool stale                      = 6;
}

message GetAlertRequest {
    string id          = 1;
}

message GetAlertsRequest {
    repeated Policy_Category category      = 1;
    repeated string policy_name            = 2;
    repeated Severity severity             = 3;
    google.protobuf.Timestamp since        = 4;
    repeated bool stale                    = 5;
    repeated string cluster                = 6;
    repeated string deployment_id          = 7;
}

message GetAlertsResponse {
    repeated Alert alerts = 1;
}

message GetAlertsGroupResponse {
    message PolicyGroup {
        Policy policy = 1;
        int64 num_alerts = 2;
    }
    message CategoryGroup {
        Policy_Category category = 1;
        repeated PolicyGroup by_policy = 2;
    }
    repeated CategoryGroup by_category = 1;
}

message GetAlertsCountsRequest {
    GetAlertsRequest request    = 1;
    enum RequestGroup {
        UNSET       = 0;
        CATEGORY    = 1;
        CLUSTER     = 2;
    }
    RequestGroup group_by       = 2;
}

message GetAlertsCountsResponse {
    message AlertGroup {
        string group                    = 1;
        message AlertCounts {
            Severity severity   = 1;
            int64 count         = 2;
        }
        repeated AlertCounts counts     = 2;
    }
    repeated AlertGroup groups = 1;
}

service AlertService {

    rpc GetAlert (GetAlertRequest) returns (Alert) {
        option (google.api.http) = {
            get: "/v1/alert/{id}"
        };
    }

    rpc GetAlerts (GetAlertsRequest) returns (GetAlertsResponse) {
        option (google.api.http) = {
            get: "/v1/alerts"
        };
    }

    rpc GetAlertsGroup (GetAlertsRequest) returns (GetAlertsGroupResponse) {
        option (google.api.http) = {
            get: "/v1/alerts/groups"
        };
    }

    rpc GetAlertsCounts (GetAlertsCountsRequest) returns (GetAlertsCountsResponse) {
        option (google.api.http) = {
            get: "/v1/alerts/counts"
        };
    }
    // No post/put API for alerts

    // No deletion of alerts

}
