syntax = "proto3";

option go_package = "v1";

import "google/api/annotations.proto";
import "api/v1/alert_service.proto";

package v1;

enum Action {
    CREATED = 0;
    REMOVED = 1;
}

message Event {
    int64 time      = 1;
    Action action   = 2;
    string id       = 3;
}

message GetAlertTimeseriesResponse {
    repeated Event events = 1;
}

service DashboardService {

    rpc GetAlertTimeseries(GetAlertsRequest) returns (GetAlertTimeseriesResponse) {
        option (google.api.http) = {
            get: "/v1/dashboard/alerts/timeseries"
        };
    }

}